fixed minor spacing

--- a/app/assets/stylesheets/reviews/reviews.scss
+++ b/app/assets/stylesheets/reviews/reviews.scss
@@ -5,50 +5,49 @@
 @import "../variables.scss";
 
 .review-index-container {
-	width: 100%;
-	max-height: 1000px;
-	overflow-x: hidden;
-	overflow-y: auto;
-	padding: 12px;
+  width: 100%;
+  max-height: 1000px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 12px;
 }
 
 .review-index-container > h3 {
-	font-weight: 600;
-	margin-bottom: 16px;
-	padding-bottom: 12px;
-	border-bottom: 2px solid rgba(128, 128, 128, 0.726);
+  font-weight: 600;
+  margin-bottom: 16px;
+  padding-bottom: 12px;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.726);
 }
 
 .review-form-container {
-	width: 90%;
-	margin: 0 auto;
-	margin-bottom: 32px;
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 32px;
 }
 .review-form {
-	display: flex; 
-	flex-direction: column;
-	width: 100%
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .review-rating-wrapper {
-	margin-bottom: 12px;
-	
+  margin-bottom: 12px;
 }
 .review-rating {
-	margin-left: 8px;
+  margin-left: 8px;
 }
 
 .review-body {
-	width: 90%;
-	height: 200px;
-	border-radius: 4px;
-	font-size: 16px;
-	padding: 12px;
-	resize: none;
+  width: 90%;
+  height: 200px;
+  border-radius: 4px;
+  font-size: 16px;
+  padding: 12px;
+  resize: none;
 }
 
 .review-submit {
-  background-color:rgba(182, 182, 182, 0.33);
+  background-color: rgba(182, 182, 182, 0.33);
   color: inherit;
   border: none;
   padding: 12px;
@@ -57,7 +56,7 @@
   outline: inherit;
   border-radius: 24px;
   transition: transform 100ms ease-out, background 150ms ease-out;
-	width: 100px;
+  width: 100px;
 }
 
 .review-submit:hover {
@@ -70,32 +69,33 @@
 }
 
 .review-wrapper {
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 32px;
 }
 
 .review-header {
-	display: flex;
-	margin: 0;
-	align-items: center;
-	font-size: 14px;
-	color: #595959;
+  display: flex;
+  margin: 0;
+  align-items: center;
+  font-size: 14px;
+  color: #595959;
 }
 
 .review-wrapper > section {
-	padding-left: 6%;
+  padding-left: 6%;
 }
 
 .review-wrapper > section > p {
-	font-size: 16px;
+  font-size: 16px;
+  white-space: pre-line;
 }
 
 .user-logo {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
   background: none;
   border: solid black 1px;
   width: 40px;
@@ -104,9 +104,9 @@
   outline: inherit;
   border-radius: 50%;
   transition: transform 100ms ease-out, background 150ms ease-out;
-	margin-right: 12px;
+  margin-right: 12px;
 }
 
 .review-date {
-	margin-left: 8px;
+  margin-left: 8px;
 }
